# ham-shack

cw/: player.py
ham-exam/: convert.py  test1.html  test2.html
support/: wsjtx-ft8-to-map.html
tools/cw/: keyer.py
tools/si5351-gen--blue-pill/: Cargo.toml  README.md
tools/si5351-gen--blue-pill/.cargo/: config.toml
tools/si5351-gen--blue-pill/codex/: AGENTS.md  README.md  SKILL.md  notes.md  worklog.md
tools/si5351-gen--blue-pill/src/support/: mod.rs
tools/tests/wspr/c/: CMakeLists.txt  README.md  main.c  wspr.c  wspr.h
tools/tests/wspr/c/.claude/: CONTEXT.md
tools/tests/wspr/c/tests/: test_f1.c  test_f2.c
tools/wspr-beacon--blue-pill/: Cargo.toml  README.md  build.rs  memory.x
tools/wspr-beacon--blue-pill/.cargo/: config.toml
tools/wspr-beacon--blue-pill/.claude/: CONTEXT.md
tools/wspr-beacon--blue-pill/examples/: gen-test1.rs  gps-test1.rs  gps-test2.rs  gps-test3.rs  gps-test4.rs  lcd-test1.rs  lcd-test2.rs  led-test1.rs
tools/wspr-beacon--blue-pill/src/: beacon.rs  lib.rs  wspr.rs
tools/wspr-beacon--blue-pill/src/beacon/: events.rs  logging.rs  mod.rs  qth.rs  states.rs
tools/wspr-beacon--blue-pill/src/support/: bitbang_i2c_compat.rs  mod.rs  si5351.rs
