[package]
name = "stm32-gen"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2024"
rust-version = "1.85"

[features]
# PWM features: tim/mapping selection
tim2_remap_00 = []
tim2_remap_01 = []
tim2_remap_10 = []
tim2_remap_11 = []

tim3_remap_00 = []
tim3_remap_10 = []

tim4_remap_00 = []

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitbang-hal = "0.3.3"
bitflags = "2.10.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
hd44780-driver = "0.4.0"
nb = "1.1.0"
panic-semihosting = "0.6.0"
embedded-hal = "0.2.7"
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
rotary-encoder-embedded = "0.5.0"
stm32f1xx-hal = { version = "0.11.0", features = ["stm32f103", "medium"] }
