[package]
name = "wspr-beacon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "beacon"
path = "src/beacon.rs"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"

stm32f1xx-hal = { version = "0.11", features = ["stm32f103", "medium"] }

ssd1306 = "0.10"
embedded-graphics = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = true
