[package]
name = "wspr-beacon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "beacon"
path = "src/beacon.rs"

[dependencies]
bitflags = "2.10.0"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2"
panic-semihosting = "0.6.0"

panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"

nb = "1.1"
stm32f1xx-hal = { version = "0.11", features = ["stm32f103", "medium"] }

ssd1306 = "0.10"
bitbang-hal = "0.3.3"
embedded-graphics = "0.8"

embedded-hal = "0.2.7"
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = true

[[example]]
name = "led-test1"
path = "examples/led-test1.rs"

[[example]]
name = "lcd-test1"
path = "examples/lcd-test1.rs"

[[example]]
name = "lcd-test2"
path = "examples/lcd-test2.rs"

[[example]]
name = "gen-test1"
path = "examples/gen-test1.rs"

[[example]]
name = "gps-test1"
path = "examples/gps-test1.rs"

[[example]]
name = "gps-test2"
path = "examples/gps-test2.rs"
